[navbar][s]: Switch places of navlinks and searchbar + social media icons so that it looks better. Also have a go at fixing the logo bug by removing the hacky solution and adding a vertical alignment middle.

--- a/site/.vuepress/theme/styles/index.styl
+++ b/site/.vuepress/theme/styles/index.styl
@@ -25,11 +25,6 @@ body
   color:black;
 }
 
-img.logo {
-  margin: -2.2rem;
-  padding-left: 2rem;
-}
-
 p > span, h1, h2, h3 {
   font-weight: 500;
   color: black;
